reworked db - migrations and models from sequelize cli

--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -1,19 +1,13 @@
 {
-  "development": {
-    "username": "postgres",
-    "password": "123kid",
-    "database": "breemed",
-    "host": "127.0.0.1",
+  "production": {
+    "url":"postgres://vikozotg:GwwLg13EsvTH_oo80blP1oXRai40_6Kz@baasu.db.elephantsql.com:5432/vikozotg",
     "dialect": "postgres"
   },
-  "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "production": {
-    "dialect": "mysql"
+  "production1": {
+    "username": "vikozotg",
+    "password": "GwwLg13EsvTH_oo80blP1oXRai40_6Kz",
+    "database": "vikozotg",
+    "host": "baasu.db.elephantsql.com",
+    "dialect": "postgres"
   }
 }
