--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d dist",
     "start": "rm -rf ./www/src/ && webpack --config webpack.config.js",
-    "seed": "node_modules/.bin/sequelize db:seed:all"
+    "seed": "node_modules/.bin/sequelize db:seed:all",
+    "unmigrate":"node_modules/.bin/sequelize db:migrate:undo:all --config src/db/config/config.json --options-path=src/db/config/options.json",
+    "migrate":"node_modules/.bin/sequelize db:migrate --config src/db/config/config.json --options-path=src/db/config/options.json"
   },
   "author": "freshly breemed",
   "license": "ISC",
@@ -18,6 +20,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bluebird": "^3.5.1",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.4",
     "express": "^4.15.3",
@@ -35,9 +38,9 @@
     "react-router": "^4.1.2",
     "redux": "^3.7.2",
     "seedquelize": "^1.0.1",
-    "sequelize": "^4.22.15",
+    "sequelize": "4.30.1",
     "sequelize-auto": "^0.4.29",
-    "sequelize-cli": "^3.1.0",
+    "sequelize-cli": "4.0.01",
     "sequelize-fixtures": "^0.6.0",
     "sqlite3": "^3.1.13",
     "start-server-webpack-plugin": "^2.2.0",
