--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "babel src -d dist",
     "start": "rm -rf ./www/src/ && webpack --config webpack.config.js",
     "seed": "node_modules/.bin/sequelize db:seed:all",
-    "unmigrate":"node_modules/.bin/sequelize db:migrate:undo:all --config src/db/config/config.json --options-path=src/db/config/options.json",
-    "migrate":"node_modules/.bin/sequelize db:migrate --config src/db/config/config.json --options-path=src/db/config/options.json"
+    "unmigrate": "node_modules/.bin/sequelize db:migrate:undo:all --config src/db/config/config.json --options-path=src/db/config/options.json",
+    "migrate": "node_modules/.bin/sequelize db:migrate --config src/db/config/config.json --options-path=src/db/config/options.json",
+    "seed": "node_modules/.bin/sequelize db:seed:all --config src/db/config/config.json --options-path=src/db/config/options.json"
   },
   "author": "freshly breemed",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.4",
     "express": "^4.15.3",
@@ -29,6 +31,7 @@
     "gulp-env": "^0.4.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-util": "^3.0.8",
+    "multer": "^1.3.0",
     "path": "^0.12.7",
     "pg": "6.4.1",
     "react": "^15.6.1",
@@ -38,9 +41,9 @@
     "react-router": "^4.1.2",
     "redux": "^3.7.2",
     "seedquelize": "^1.0.1",
-    "sequelize": "4.30.1",
+    "sequelize": "3",
     "sequelize-auto": "^0.4.29",
-    "sequelize-cli": "4.0.01",
+    "sequelize-cli": "3",
     "sequelize-fixtures": "^0.6.0",
     "sqlite3": "^3.1.13",
     "start-server-webpack-plugin": "^2.2.0",
