--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d dist",
     "start": "rm -rf ./www/src/ && webpack --config webpack.config.js",
-    "seed": "node_modules/.bin/sequelize db:seed:all",
-    "unmigrate": "node_modules/.bin/sequelize db:migrate:undo:all --config src/db/config/config.json --options-path=src/db/config/options.json",
-    "migrate": "node_modules/.bin/sequelize db:migrate --config src/db/config/config.json --options-path=src/db/config/options.json",
-    "seed": "node_modules/.bin/sequelize db:seed:all --config src/db/config/config.json --options-path=src/db/config/options.json"
+    "seed": "node_modules/.bin/sequelize db:seed:all --config src/db/config/config.json --options-path=src/db/config/options.json --env production ",
+    "unmigrate": "node_modules/.bin/sequelize db:migrate:undo:all --config src/db/config/config.json --options-path=src/db/config/options.json --env production ",
+    "migrate": "node_modules/.bin/sequelize db:migrate --config src/db/config/config.json --options-path=src/db/config/options.json --env production ",
+    "reset": "node_modules/.bin/sequelize db:migrate --config src/db/config/config.json --options-path=src/db/config/options.json --env production; node_modules/.bin/sequelize db:migrate:undo:all --config src/db/config/config.json --options-path=src/db/config/options.json --env production; ",
+    "unseed": "node_modules/.bin/sequelize db:seed:undo:all --config src/db/config/config.json --options-path=src/db/config/options.json --env production "
   },
   "author": "freshly breemed",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
