--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
     "seedquelize": "^1.0.1",
     "sequelize": "3",
     "sequelize-auto": "^0.4.29",
-    "sequelize-cli": "3",
+    "sequelize-cli": "4.0.0",
     "sequelize-fixtures": "^0.6.0",
     "sqlite3": "^3.1.13",
     "start-server-webpack-plugin": "^2.2.0",
+    "umzug": "^2.1.0",
     "webpack": "^3.3.0",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-dev-server": "^2.9.5",
