--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.4",
+    "eslint": "^4.16.0",
     "express": "^4.15.3",
     "graphql": "^0.11.7",
     "gulp": "^3.9.1",
@@ -58,6 +59,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-latest": "^6.24.1"
+    "babel-preset-latest": "^6.24.1",
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1"
   }
 }
