--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d dist",
-    "start": "rm -rf ./www/src/ && node src/server.js & webpack --config webpack.config.js",
+    "build": "./node_modules/.bin/babel-node src -d dist",
+    "start": "rm -rf ./www/src/ && node src/server-config.js & webpack --config webpack.config.js",
     "start2": "node src/server.js",
     "seed": "node_modules/.bin/sequelize db:seed:all --config src/db/config/config.json --options-path=src/db/config/options.json --env production ",
     "unmigrate": "node_modules/.bin/sequelize db:migrate:undo:all --config src/db/config/config.json --options-path=src/db/config/options.json --env production ",
@@ -17,36 +17,76 @@
   "author": "freshly breemed",
   "license": "ISC",
   "dependencies": {
-    "auth0-js": "^9.2.0",
-    "axios": "^0.16.2",
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
+    "@babel/preset-es2015": "^7.0.0-beta.40",
+    "@babel/preset-es2016": "^7.0.0-beta.40",
+    "@babel/preset-react": "^7.0.0-beta.40",
+    "auth0-js": "9.0.0",
+    "auth0-lock": "^11.3.0",
+    "axios": "^0.18.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "8.0.0-beta.0",
+    "babel-plugin-dynamic-import-webpack": "^1.0.2",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "cross-fetch": "^2.0.0",
+    "css-loader": "^0.28.10",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.4",
+    "ejs-loader": "^0.3.0",
     "express": "^4.15.3",
+    "express-jwt": "^5.3.0",
+    "express-jwt-authz": "^1.0.0",
+    "flux": "^3.1.3",
+    "fs": "^0.0.1-security",
     "graphql": "^0.11.7",
     "gulp": "^3.9.1",
     "gulp-env": "^0.4.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-util": "^3.0.8",
+    "jsdom": "^11.6.2",
+    "jwks-rsa": "^1.2.1",
+    "jwt-decode": "^2.2.0",
+    "keymirror": "^0.1.1",
+    "moment": "^2.21.0",
     "multer": "^1.3.0",
+    "node-localstorage": "^1.3.0",
+    "node-storage-shim": "^1.0.1",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.1",
     "path": "^0.12.7",
     "pg": "6.4.1",
     "react": "^15.6.1",
+    "react-addons-linked-state-mixin": "^15.6.2",
+    "react-bootstrap": "^0.32.1",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-date-picker-cs": "^0.1.28",
+    "react-datepicker": "^1.2.2",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.1.3",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.1.2",
+    "react-mixin": "^4.0.0",
+    "react-redux": "5.0.6",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "reqwest": "^2.0.5",
     "seedquelize": "^1.0.1",
     "sequelize": "3",
     "sequelize-auto": "^0.4.29",
@@ -54,12 +94,15 @@
     "sequelize-fixtures": "^0.6.0",
     "sqlite3": "^3.1.13",
     "start-server-webpack-plugin": "^2.2.0",
+    "style-loader": "^0.20.2",
     "umzug": "^2.1.0",
     "webpack": "2",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-dev-server": "^2.9.5",
     "webpack-hot-middleware": "^2.18.2",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.6.0",
+    "when": "^3.7.8",
+    "xhr2": "^0.1.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
